fix(graphism): bugs with height and overflow

--- a/src/app/pages/home-authentication/components/log-in/log-in.component.scss
+++ b/src/app/pages/home-authentication/components/log-in/log-in.component.scss
@@ -4,6 +4,7 @@
 .main {
   height: 100%;
   width: 100%;
+  overflow: auto;
 }
 
 .mobile-hide {
@@ -15,20 +16,20 @@
   width: 100%;
   background-color: $background-color;
   position: relative;
-  overflow: hidden;
+  overflow: auto;
 
   .form-hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    //height: 100%; // Important to the desktop version
+    height: 100%; // Important to the desktop version
     width: 90%;
     margin: 0 auto;
-    min-height: 92vh; // This was very important to not break the graphisms, it will always load at least the height needed
   
     .logo-mobile {
       margin: 2em 0 11em;
       width: 115px;
+      z-index: 10;
     }
 
     .main-content {
@@ -72,7 +73,6 @@
         }
       }
     }
-
     .cadastrar {
       margin-bottom: 5%;
       margin-top: auto; // sticks to the bottom when the is flex-direction: column; on the parent component
@@ -104,8 +104,9 @@ mat-form-field {
       height: 100%;
 
       .cadastrar {
-        margin-bottom: 0px;
-        margin-top: 350px;
+        z-index: 10;
+        margin-top: 50%;
+        padding-bottom: 30px;
       }
     }
 
