--- a/src/app/pages/home-authentication/components/sign-up/sign-up.component.scss
+++ b/src/app/pages/home-authentication/components/sign-up/sign-up.component.scss
@@ -4,6 +4,7 @@
 .main {
   height: 100%;
   width: 100%;
+  overflow: auto;
 }
 
 .mobile-hide {
@@ -15,21 +16,20 @@
   width: 100%;
   background-color: $background-color;
   position: relative;
-  overflow: hidden;
-  box-sizing: border-box;
+  overflow: auto;
 
   .form-hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    //height: 100%; // Important to the desktop version
+    height: 100%; // Important to the desktop version
     width: 90%;
     margin: 0 auto;
-    min-height: 92vh; // This was very important to not break the graphisms, it will always load at least the height needed
   
     .logo-mobile {
       margin: 2em 0 11em;
       width: 115px;
+      z-index: 10;
     }
 
     .main-content {
@@ -101,8 +101,9 @@ mat-form-field {
       height: 100%;
 
       .login {
-        margin-bottom: 0px;
-        margin-top: 350px;
+        z-index: 10;
+        margin-top: 50%;
+        padding-bottom: 30px;
       }
     }
 
