--- a/src/app/pages/queue-entry/components/user-on-queue/user-on-queue.component.scss
+++ b/src/app/pages/queue-entry/components/user-on-queue/user-on-queue.component.scss
@@ -130,6 +130,7 @@
   .hero {
     width: 33%;
     height: 520px;
+    margin-bottom: 40px;
   
     .content {
       height: 440px;
