--- a/src/app/pages/queue-entry/shared/components/confirm-quit/confirm-quit.component.scss
+++ b/src/app/pages/queue-entry/shared/components/confirm-quit/confirm-quit.component.scss
@@ -14,34 +14,6 @@
   //justify-content: center;
 }
 
-.hero {
-  width: 80%;
-  background-color: #fff;
-  border-radius: 40px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 18vh auto;
-  height: 350px;
-  position: relative;
-
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 80%;
-    margin: auto;
-    height: 290px;
-
-    p {
-      font-size: 14px;
-      text-align: center;
-    }
-  }
-}
-
 .bttns {
   display: flex;
   flex-flow: row nowrap;
@@ -122,23 +94,11 @@
   .desktop-hide {
     display: none;
   }
-  
-  .hero {
-    width: 33%;
-    height: 520px;
-  
-    .content {
-      height: 440px;
-
-      p {
-        font-size: 18px;
-      }
-    }
-  }
 
   .confirm-user-quit {
     width: 33%;
     height: 320px;
+    margin-bottom:  40px;
     
     .content-quit {
       width: 75%;
