--- a/src/app/pages/queue-entry/shared/components/graphisms/graphisms.component.scss
+++ b/src/app/pages/queue-entry/shared/components/graphisms/graphisms.component.scss
@@ -9,6 +9,7 @@
   width: 76px;
   height: 72px;
   padding-top: 6px;
+  top: 80px;
 }
 
 .pontos-grandes {
