--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,6 +2,7 @@
 
 .bg {
   background: #FF662E;
+  z-index: 10;
 
   header {
     display: flex;
